src/teams/demo-app/demo-app-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-frontend
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app-frontend
  template:
    metadata:
      labels:
        app: demo-app-frontend
    spec:
      containers:
        - name: demo-app-frontend
          image: opencloudhuborg/demo-app-frontend:main-2418fc7
          ports:
            - containerPort: 3000
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
